--- a/TheGreatGroupModules/Web.config
+++ b/TheGreatGroupModules/Web.config
@@ -21,6 +21,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
@@ -58,11 +59,7 @@
             change the connection string named "DefaultConnection" to connect to an instance
             of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
       -->
-    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
-      <providers>
-        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
-      </providers>
-    </sessionState>
+ <sessionState mode="InProc" timeout="60" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -91,11 +88,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" />
-        <bindingRedirect oldVersion="1.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
