--- a/TheGreatGroupModules/TheGreatGroupModules.csproj
+++ b/TheGreatGroupModules/TheGreatGroupModules.csproj
@@ -162,11 +162,7 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
-<<<<<<< HEAD
-
-=======
     <Reference Include="System.Xml.Linq" />
->>>>>>> 02381d454b69740040f31aaccdafafca449f224a
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.3.0\lib\WebGrease.dll</HintPath>
@@ -299,6 +295,7 @@
     <Content Include="Content\icons\dxicons.woff" />
     <Content Include="Content\icons\dxiconsios.ttf" />
     <Content Include="Content\icons\dxiconsios.woff" />
+    <Content Include=".gitignore" />
     <None Include="Properties\PublishProfiles\publish_web.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="QRCoderProject.Portable.csproj" />
@@ -328,6 +325,7 @@
     <Content Include="Scripts\src\index.js" />
     <Content Include="Scripts\src\init.js" />
     <Content Include="Scripts\src\installment.js" />
+    <Content Include="Scripts\src\manage_staff.js" />
     <Content Include="Scripts\src\manage_zone.js" />
     <Content Include="Scripts\src\reports_src.js" />
     <Content Include="Scripts\_references.js" />
@@ -3311,6 +3309,9 @@
     <Content Include="Views\Staffs\ListStaffBranch.cshtml" />
     <Content Include="Views\Report\OpenCloseAccountReport.cshtml" />
     <Content Include="Views\Setting\ListZone.cshtml" />
+    <Content Include="Views\Staffs\StaffLocation.cshtml">
+      <SubType>Code</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
