--- a/TheGreatGroupModules/TheGreatGroupModules.csproj
+++ b/TheGreatGroupModules/TheGreatGroupModules.csproj
@@ -96,6 +96,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -162,11 +163,6 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
-<<<<<<< HEAD
-
-=======
-    <Reference Include="System.Xml.Linq" />
->>>>>>> 02381d454b69740040f31aaccdafafca449f224a
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.3.0\lib\WebGrease.dll</HintPath>
@@ -180,7 +176,6 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ContractController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
@@ -299,6 +294,7 @@
     <Content Include="Content\icons\dxicons.woff" />
     <Content Include="Content\icons\dxiconsios.ttf" />
     <Content Include="Content\icons\dxiconsios.woff" />
+    <Content Include=".gitignore" />
     <None Include="Properties\PublishProfiles\publish_web.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="QRCoderProject.Portable.csproj" />
@@ -328,6 +324,7 @@
     <Content Include="Scripts\src\index.js" />
     <Content Include="Scripts\src\init.js" />
     <Content Include="Scripts\src\installment.js" />
+    <Content Include="Scripts\src\manage_staff.js" />
     <Content Include="Scripts\src\manage_zone.js" />
     <Content Include="Scripts\src\reports_src.js" />
     <Content Include="Scripts\_references.js" />
