--- a/TheGreatGroupModules/TheGreatGroupModules.csproj
+++ b/TheGreatGroupModules/TheGreatGroupModules.csproj
@@ -330,6 +330,7 @@
     <Content Include="Scripts\src\manage_staff_role.js" />
     <Content Include="Scripts\src\manage_staff_zone.js" />
     <Content Include="Scripts\src\manage_zone.js" />
+    <Content Include="Scripts\src\open_close_account_report.js" />
     <Content Include="Scripts\src\reports_src.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Sources\EULA\AngularJS License.txt" />
